--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,6 +3,9 @@
 <div class="border rounded p-2 mb-2">
   <%= simple_form_for [@list] do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Submit", class: "btn btn-primary" %>
 <% end %>
 </div>
+<br>
+<p> <%= link_to 'Back to lists', lists_path, class: 'btn btn-primary' %> </p>
