--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,9 @@
-<h1> <%= @list.name.capitalize %> </h1>
+<div class="py-5 shadow-lg rounded card-category text-white" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+url('<%= cl_image_path(@list.photo.key, height: 500, crop: :fill) %>')">
+  <h1> <%= @list.name.capitalize %> </h1>
+</div>
+
+
 <br>
 <p> <%= link_to 'Add movie', new_list_bookmark_path(@list), class: 'btn btn-success'  %> </p>
 <br>
@@ -15,7 +20,6 @@
         <div class="mx-4 pb-2 pl-4 pr-2 d-flex justify-content-between align-items-center">
           <span> "<%= bookmark.comment.capitalize %>" </span>
           <p class="btn text-bg-danger bg-opacity-75 text-light">
-          <%# delete method not working!! %>
           <%= link_to 'Remove', bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'text-decoration-none text-light'  %>
           </p>
 
